# PawClick

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
app/: app.py  runner.py
scripts/: auto_click.py
src/: gui.py  runner.py  utils.py
src/pawclick/: __init__.py  utils.py
src/pawclick/gui/: app.py
